[project]
name = "rlmarketmaker"
version = "1.0.0"
description = "Reinforcement Learning Market Maker with Crypto Data Support"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "RLMarketMaker Team" }
]
keywords = [
    "reinforcement-learning",
    "market-making",
    "trading",
    "cryptocurrency",
    "ppo",
    "gymnasium"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "gymnasium>=0.29.0",
    
    # Data handling
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "pyyaml>=6.0.0",
    
    # Network and API
    "requests>=2.31.0",
    
    # Utilities
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
]

notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
]

all = [
    "rlmarketmaker[dev,test,notebook]",
]

[project.scripts]
rlmm-train = "scripts.training.train_min:main"
rlmm-eval = "scripts.evaluation.eval_min:main"
rlmm-backtest = "scripts.backtest:main"
rlmm-generate-data = "scripts.generate_test_crypto_data:main"
rlmm-test-crypto = "scripts.test_crypto_integration_simple:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlmarketmaker"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--color=yes",
    "--tb=short",
    "--cov=rlmarketmaker",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.uv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
